# vim-pandoc-syntax

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md  tags
.github/workflows/: vint.yml
autoload/pandoc/syntax/: color.vim
doc/: pandoc-syntax.txt
ftdetect/: pandoc.vim
indent/: pandoc.vim
lua/syntax_commonmark/: init.lua
plugin/: pandoc-syntax-check.vim
src/: lib.rs  lua.rs  python.rs
syntax/: .pandoc.vim.swp  beamer.vim  pandoc.vim  pandoc_ancillary.vim  pandoc_cmark_colors.vim  pandoc_commonmark.vim  pandoc_legacy.vim  pandoc_minimized.vim
tests/: block.pdc  from-issues.pdc  headings.pdc  issue1.pdc  latex.pdc  refs.pdc  roman-numerals.pdc  smart.pdc  tables.pdc  yaml.pdc
